rspec-tools/tests/resources/invalid-rules/S200/common/rule.adoc
== Why is this an issue?
== How to fix it?
